# web/openapi.json
@@ -7536,6 +7536,17 @@
             "$ref": "#/components/schemas/LinkMode",
             "default": "strm"
           },
+          "strm_content_template": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Strm Content Template"
+          },
           "thumb_template": {
             "anyOf": [
               {
@@ -7727,6 +7738,17 @@
           },
           "link_mode": {
             "$ref": "#/components/schemas/LinkMode"
+          },
+          "strm_content_template": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Strm Content Template"
           },
           "thumb_template": {
             "anyOf": [
@@ -7958,6 +7980,17 @@
                 "type": "null"
               }
             ]
+          },
+          "strm_content_template": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Strm Content Template"
           },
           "thumb_template": {
             "anyOf": [
